--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -324,7 +324,27 @@ Full-Width Styles
   height: 70px;
   background: url('../images/icon_download.png') no-repeat 0% 90%;
 }
-
+#links{
+  position: absolute;
+  width: 110px;
+  z-index: 10;
+  bottom: -40px;
+  right: 0;
+  height: 70px;
+  background: url('../images/icon_links.png') no-repeat 0% 90%;
+}
+.lanfasy{
+  display: block;
+  float: right;
+  width: 90px;
+  height:70px;
+  text-indent: -5000px;
+  overflow: hidden;
+  background: url(../images/sprite_link.png) no-repeat bottom left;
+}
+.lanfasy:hover{
+	  background: url(../images/sprite_link.png) no-repeat top left;
+}
 .zip_download_link {
   display: block;
   float: right;
