added pages for MTMCL and Links

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -118,7 +118,9 @@ a {
   -ms-transition: text-shadow 0.5s ease;
 }
 
-a:hover, a:focus {text-decoration: underline;}
+a:hover, a:focus {
+	text-decoration: underline;
+}
 
 footer a {
   color: #F2F2F2;
@@ -285,6 +287,37 @@ Full-Width Styles
   border-bottom-left-radius: 2px;
   border-bottom-right-radius: 2px;
 }
+#forkproject_banner {
+  display: block;
+  position: absolute;
+  top:45px;
+  right: 10px;
+  z-index: 10;
+  padding: 10px 50px 10px 10px;
+  color: #fff;
+  background: url('../images/blacktocat.png') #0090ff no-repeat 95% 50%;
+  font-weight: 700;
+  box-shadow: 0 0 10px rgba(0,0,0,.5);
+  border-bottom-left-radius: 2px;
+  border-bottom-right-radius: 2px;
+}
+#normal_banner {
+	display: block;
+	float:left;
+	top: 0;
+	right: 10px;
+	z-index: 10;
+	padding-top: 10px;
+	padding-right: 10px;
+	padding-left: 10px;
+	padding-bottom: 10px;
+	color: #fff;
+	background: #0090ff no-repeat 95% 50%;
+	font-weight: 700;
+	box-shadow: 0 0 10px rgba(0,0,0,.5);
+	border-bottom-left-radius: 2px;
+	border-bottom-right-radius: 2px;
+}
 
 #header_wrap {
   background: #212121;
@@ -325,14 +358,24 @@ Full-Width Styles
   background: url('../images/icon_download.png') no-repeat 0% 90%;
 }
 #links{
-  position: absolute;
-  width: 110px;
-  z-index: 10;
-  bottom: -40px;
-  right: 0;
-  height: 70px;
-  background: url('../images/icon_links.png') no-repeat 0% 90%;
+	position: absolute;
+	width: auto;
+	z-index: 0;
+	bottom: -40px;
+	left: 0;
+	height: 70px;
+	background-repeat: no-repeat;
+	background-position: 100% 90%;
+	background-image: url('../images/icon_links.png');
 }
+sup.reference{
+	unicode-bidi: -moz-isolate;
+	unicode-bidi: -webkit-isolate;
+	unicode-bidi: isolate;
+	font-size: small;
+	height: 33%;
+	width: 1.25em;
+	}
 .lanfasy{
   display: block;
   float: right;
