--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -136,18 +136,17 @@ strong {
 }
 
 img {
-  position: relative;
-  margin: 0 auto;
-  max-width: 739px;
-  padding: 5px;
-  margin: 10px 0 10px 0;
-  border: 1px solid #ebebeb;
-
-  box-shadow: 0 0 5px #ebebeb;
-  -webkit-box-shadow: 0 0 5px #ebebeb;
-  -moz-box-shadow: 0 0 5px #ebebeb;
-  -o-box-shadow: 0 0 5px #ebebeb;
-  -ms-box-shadow: 0 0 5px #ebebeb;
+	position: relative;
+	margin: 0 auto;
+	max-width: 739px;
+	padding: 5px;
+	margin: 10px 0 10px 0;
+	border: 1px solid #ebebeb;
+	box-shadow: 0 0 5px #ebebeb;
+	-webkit-box-shadow: 0 0 5px #ebebeb;
+	-moz-box-shadow: 0 0 5px #ebebeb;
+	-o-box-shadow: 0 0 5px #ebebeb;
+	-ms-box-shadow: 0 0 5px #ebebeb;
 }
 
 p img {
@@ -318,14 +317,30 @@ Full-Width Styles
 	border-bottom-left-radius: 2px;
 	border-bottom-right-radius: 2px;
 }
-
+#small_normal_banner {
+	display: block;
+	float:left;
+	top: 0;
+	right: 10px;
+	z-index: 10;
+	padding-top: 10px;
+	padding-right: 10px;
+	padding-left: 10px;
+	padding-bottom: 10px;
+	color: #fff;
+	background: #007f45 no-repeat 95% 50%;
+	font-weight: 700;
+	box-shadow: 0 0 10px rgba(0,0,0,.5);
+	border-bottom-left-radius: 2px;
+	border-bottom-right-radius: 2px;
+}
 #header_wrap {
-  background: #212121;
-  background: -moz-linear-gradient(top, #373737, #212121);
-  background: -webkit-linear-gradient(top, #373737, #212121);
-  background: -ms-linear-gradient(top, #373737, #212121);
-  background: -o-linear-gradient(top, #373737, #212121);
-  background: linear-gradient(top, #373737, #212121);
+  background: #989898;
+  background: -moz-linear-gradient(top, #689689, #21BA54);
+  background: -webkit-linear-gradient(top, #689689, #21BA54);
+  background: -ms-linear-gradient(top, #689689, #21BA54);
+  background: -o-linear-gradient(top, #689689, #21BA54);
+  background: linear-gradient(top, #689689, #21BA54);
 }
 
 #header_wrap .inner {
@@ -361,7 +376,18 @@ Full-Width Styles
 	position: absolute;
 	width: auto;
 	z-index: 0;
-	bottom: -40px;
+	bottom: -25px;
+	left: 0;
+	height: 70px;
+	background-repeat: no-repeat;
+	background-position: 100% 90%;
+	background-image: url('../images/icon_links.png');
+}
+#sublinks{
+	position: absolute;
+	width: auto;
+	z-index: 0;
+	bottom: -70px;
 	left: 0;
 	height: 70px;
 	background-repeat: no-repeat;
@@ -376,18 +402,7 @@ sup.reference{
 	height: 33%;
 	width: 1.25em;
 	}
-.lanfasy{
-  display: block;
-  float: right;
-  width: 90px;
-  height:70px;
-  text-indent: -5000px;
-  overflow: hidden;
-  background: url(../images/sprite_link.png) no-repeat bottom left;
-}
-.lanfasy:hover{
-	  background: url(../images/sprite_link.png) no-repeat top left;
-}
+	
 .zip_download_link {
   display: block;
   float: right;
@@ -428,7 +443,7 @@ sup.reference{
 }
 
 #footer_wrap {
-  background: #212121;
+  background: #21BA54;
 }
 
 
